--- a/index.html
+++ b/index.html
@@ -38,18 +38,18 @@
                     </div>
                 </div>
 
-                <h2 class="profile__name">Đinh Duy Vinh <img src="//ngocminh.it/all/svg/tich-xanh.svg" alt="Đã Xác Minh" style="height: 15px;" /></b>
+                <h2 class="profile__name">Nguyễn Đình Dương <img src="//ngocminh.it/all/svg/tich-xanh.svg" alt="Đã Xác Minh" style="height: 15px;" /></b>
                 </h2>
                 <h3 class="profile__profession">🌐 FACEBOOK - TIK TOK - INSTAGRAM 🌐 <br> 📩 TIME WORK: 7:00 - 22:00 📩 </h3>
 
                 <ul class="profile__social">
-                    <a href="https://www.facebook.com/100015359342786" target="_blank" class="profile__social-link">
+                    <a href="https://www.facebook.com/nguyendinhduongvip" target="_blank" class="profile__social-link">
                         <i class="ri-facebook-fill"></i>
                     </a>
-                    <a href="https://zalo.me/0914428517" target="_blank" class="profile__social-link">
+                    <a href="https://zalo.me/ngduongvip" target="_blank" class="profile__social-link">
                         <i class="ri-question-answer-fill"></i>
                     </a>
-                    <a href="https://github.com/dinhduyvinh" target="_blank" class="profile__social-link">
+                    <a href="https://github.com/zuongpro" target="_blank" class="profile__social-link">
                         <i class="ri-github-line"></i>
                     </a>
                 </ul>
@@ -63,7 +63,7 @@
                     </p>
                 </div>
                 <div class="profile__info-group">
-                    <h3 class="profile__info-number">200x</h3>
+                    <h3 class="profile__info-number">2007</h3>
                     <p class="profile__info-description">
                         Năm Sinh
                     </p>
@@ -85,11 +85,11 @@
 
                 <div class="profile__buttons-small">
                     <!-- Insert a real number plus country code -->
-                    <a href="https://api.whatsapp.com/send?phone=0914428517&text=Hello, more information!" target="_blank" class="button button__small button__gray">
+                    <a href="https://api.whatsapp.com/send?phone=0342206319&text=Hello, more information!" target="_blank" class="button button__small button__gray">
                         <i class="ri-whatsapp-line"></i>
                     </a>
                     <!-- Insert your brand name or profile -->
-                    <a href="https://m.me/100015359342786" target="_blank" class="button button__small button__gray">
+                    <a href="https://m.me/nguyendinhduongvip" target="_blank" class="button button__small button__gray">
                         <i class="ri-messenger-line"></i>
                     </a>
                 </div>
@@ -134,7 +134,7 @@
                         <div class="projects__modal">
                             <div>
                                 <span class="projects__subtitle">Trang Chủ</span>
-                                <h3 class="projects__title">ĐINH DUY VINH</h3>
+                                <h3 class="projects__title">NGUYỄN ĐÌNH DƯƠNG</h3>
                                 <a href="#" class="projects__button button button__small">
                                     <i class="ri-eye-fill"></i>
                                 </a>
@@ -149,7 +149,7 @@
                             <div>
                                 <span class="projects__subtitle">Web</span>
                                 <h3 class="projects__title">Thông Tin Cá Nhân --> Bank</h3>
-                                <a href="https://dinhduyvinh.blogspot.com/" class="projects__button button button__small">
+                                <a href="https://ngduongprofile.blogspot.com/" class="projects__button button button__small">
                                     <i class="ri-eye-fill"></i>
                                 </a>
                             </div>
@@ -163,7 +163,7 @@
                             <div>
                                 <span class="projects__subtitle">Web</span>
                                 <h3 class="projects__title">Báo Mới 24H</h3>
-                                <a href="https://baosoinoi247.blogspot.com/" class="projects__button button button__small">
+                                <a href="https://thongtinbynguyenduong.blogspot.com/" class="projects__button button button__small">
                                     <i class="ri-eye-fill"></i>
                                 </a>
                             </div>
@@ -447,7 +447,7 @@
                           return {
                             audio: null,circleLeft: null,barWidth: null,duration: null,currentTime: null,isTimerPlaying: false,
                             tracks:[{
-                                name: "Đinh Duy Vinh",
+                                name: "NGUYỄN ĐÌNH DƯƠNG",
                                 artist: "10 Ngàn Năm (Speed up)",
                                 cover: "https://i.imgur.com/DI9f3UX.jpg",
                                 source: "https://docs.google.com/uc?id=1JOIIjqq22rlZ2zG8wv9HQ2Axwsrbz5tN",
@@ -589,7 +589,7 @@
     <!--=============== FOOTER ===============-->
     <footer class="footer container">
         <span class="footer__copy">
-            &#169; </a>  2022 </a> Hệ thống thiết kế và vận hành bởi <a href="https://www.facebook.com/100015359342786/">ĐINH DUY VINH
+            &#169; </a>  2022 </a> Hệ thống thiết kế và vận hành bởi <a href="https://www.facebook.com/ngyendinhduongvip/">Nguyễn Đình 
         </span>
     </footer>
 
@@ -602,7 +602,7 @@
 	    <title>Đinh Duy Vinh (Byy)</title>
 </head>
 <body>
-<marquee id="marq" scrollamount="3" direction="left" loop="50" scrolldelay="0" behavior="scroll" onmouseover="this.stop()" onmouseout="this.start()"style="border:blue 2px SOLID"> Chào mừng các bạn đến với <font color="blue"> THÔNG TIN CÁ NHÂN </font> của <font color="green"> ĐINH DUY VINH </marquee>
+<marquee id="marq" scrollamount="3" direction="left" loop="50" scrolldelay="0" behavior="scroll" onmouseover="this.stop()" onmouseout="this.start()"style="border:blue 2px SOLID"> Chào mừng các bạn đến với <font color="blue"> THÔNG TIN CÁ NHÂN </font> của <font color="green"> NGUYỄN ĐÌNH DƯƠNG </marquee>
 <style>
 	body{display:block;-khtml-user-select:none;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;-o-user-select:none;user-select:none;unselectable:on;}
 </style>
