--- a/index.html
+++ b/index.html
@@ -171,13 +171,13 @@
                     </article>
 
                     <article class="projects__card">
-                        <img src="https://i.imgur.com/8R9YjZd.png" alt="" class="projects__img">
+                        <img src="https://i.imgur.com/McsJJLD.png" alt="" class="projects__img">
 
                         <div class="projects__modal">
                             <div>
-                                <span class="projects__subtitle">Kiểm Tra, Tố Cáo Lừa Đảo</span>
+                                <span class="projects__subtitle">New Year 2023</span>
                                 <h3 class="projects__title">[CHECK SCAM]</h3>
-                                <a href="https://kiemtrascamer.info/profile/dinh-duy-vinh" class="projects__button button button__small">
+                                <a href="https://newyear2023ok.blogspot.com/" class="projects__button button button__small">
                                     <i class="ri-eye-fill"></i>
                                 </a>
                             </div>
