--- a/index.html
+++ b/index.html
@@ -1,12 +1,4 @@
 <!DOCTYPE html>
-<!--
-██████╗░██╗███╗░░██╗██╗░░██╗  ██████╗░██╗░░░██╗██╗░░░██╗  ██╗░░░██╗██╗███╗░░██╗██╗░░██╗
-██╔══██╗██║████╗░██║██║░░██║  ██╔══██╗██║░░░██║╚██╗░██╔╝  ██║░░░██║██║████╗░██║██║░░██║
-██║░░██║██║██╔██╗██║███████║  ██║░░██║██║░░░██║░╚████╔╝░  ╚██╗░██╔╝██║██╔██╗██║███████║
-██║░░██║██║██║╚████║██╔══██║  ██║░░██║██║░░░██║░░╚██╔╝░░  ░╚████╔╝░██║██║╚████║██╔══██║
-██████╔╝██║██║░╚███║██║░░██║  ██████╔╝╚██████╔╝░░░██║░░░  ░░╚██╔╝░░██║██║░╚███║██║░░██║
-╚═════╝░╚═╝╚═╝░░╚══╝╚═╝░░╚═╝  ╚═════╝░░╚═════╝░░░░╚═╝░░░  ░░░╚═╝░░░╚═╝╚═╝░░╚══╝╚═╝░░╚═╝
--->
 <html lang="vi">
 <head>
     <meta charset="UTF-8">
@@ -34,7 +26,7 @@
                 <div class="profile__border">
                     <div class="profile__perfil">
                         <!-- Insert your image, according to the example size of the portfolio -->
-                        <img src="https://i.imgur.com/Ds2Xwzm.jpg" alt="">
+                        <img src="https://i.imgur.com/kJWSVPc.jpg" alt="">
                     </div>
                 </div>
 
