--- a/thongtinthanhtoan/index.html
+++ b/thongtinthanhtoan/index.html
@@ -1,13 +1,5 @@
 
 <!DOCTYPE html>
-<!--
-██████╗░██╗███╗░░██╗██╗░░██╗  ██████╗░██╗░░░██╗██╗░░░██╗  ██╗░░░██╗██╗███╗░░██╗██╗░░██╗
-██╔══██╗██║████╗░██║██║░░██║  ██╔══██╗██║░░░██║╚██╗░██╔╝  ██║░░░██║██║████╗░██║██║░░██║
-██║░░██║██║██╔██╗██║███████║  ██║░░██║██║░░░██║░╚████╔╝░  ╚██╗░██╔╝██║██╔██╗██║███████║
-██║░░██║██║██║╚████║██╔══██║  ██║░░██║██║░░░██║░░╚██╔╝░░  ░╚████╔╝░██║██║╚████║██╔══██║
-██████╔╝██║██║░╚███║██║░░██║  ██████╔╝╚██████╔╝░░░██║░░░  ░░╚██╔╝░░██║██║░╚███║██║░░██║
-╚═════╝░╚═╝╚═╝░░╚══╝╚═╝░░╚═╝  ╚═════╝░░╚═════╝░░░░╚═╝░░░  ░░░╚═╝░░░╚═╝╚═╝░░╚══╝╚═╝░░╚═╝
--->
 <html lang="vi">
     <head>
         <meta charset="UTF-8" />
@@ -17,7 +9,7 @@
         <link rel="dns-prefetch" href="//cdn.trinhngocminh.com" />
         <link rel="dns-prefetch" href="//cdn.jsdelivr.net" />
         <link rel="dns-prefetch" href="//cdnjs.cloudflare.com" />
-        <title>[ Đinh Duy Vinh - Thông tin cá nhân ]</title>
+        <title>[ Nguyễn Đình Dương - Thông tin cá nhân ]</title>
         <meta content="Thông Tin Thanh Toán Của Nguyễn Đình Dương !" property="og:title" />
         <meta content="https://cdn.trinhngocminh.com" property="og:url" />
         <meta content="Thông Tin Thanh Toán Của Nguyễn Đình Dương !" property="og:site_name" />
@@ -33,7 +25,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="format-detection" content="telephone=no" />
         <meta name="format-detection" content="address=no" />
-        <meta name="author" content="trinh ngoc minh" />
+        <meta name="author" content="nguyen dinh " />
         <!-- Favicons -->
         <link href="img/favicon.ico" rel="shortcut icon" type="image/x-icon" />
         <!-- Styles -->
@@ -141,30 +133,30 @@
                         </div>
                         <div class="header__base-info">
                             <h2 class="title titl--h1 Ubuntu">
-                                <b>Đinh Duy Vinh<img src="//ngocminh.it/all/svg/tich-xanh.svg" alt="Đã Xác Minh" style="height: 24px;" /></b>
+                                <b>Nguyễn Đình Dương<img src="//ngocminh.it/all/svg/tich-xanh.svg" alt="Đã Xác Minh" style="height: 24px;" /></b>
                             </h2>
                             <div class="skill-item" style="color: #ef9d64;"><b>(Byy)</b></div>
                             <ul class="header__social">
                                 <li>
-                                    <a href="https://www.facebook.com/duyvinh09/"><i class="fab fa-facebook"></i></a>
+                                    <a href="https://www.facebook.com/nguyendinhduongvip/"><i class="fab fa-facebook"></i></a>
                                 </li>
                                 <li>
-                                    <a href="//zalo.me/0914428517"><i class="fas fa-phone"></i></a>
+                                    <a href="//zalo.me/ngduongvip"><i class="fas fa-phone"></i></a>
                                 </li>
                                 <li>
-                                    <a href="https://www.instagram.com/dinhduyvinh/"><i class="fab fa-instagram"></i></a>
+                                    <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
                                 </li>
                             </ul>
                         </div>
                     </div>
                     <div class="header__right">
                         <ul class="header__contact">
-                            <li><span class="overhead">Email</span>dinhduyvinh69@gmail.com</li>
-                            <li><span class="overhead">Số điện thoại</span>0914.428.517</li>
+                            <li><span class="overhead">Email</span>zuongvip@gmail.com</li>
+                            <li><span class="overhead">Số điện thoại</span>0342.206.319</li>
                         </ul>
                         <ul class="header__contact">
-                            <li><span class="overhead">WEBSITE</span>trumlikesubre.com</li>
-                            <li><span class="overhead">Địa chỉ</span>Quảng Ngãi, VietNam</li>
+                            <li><span class="overhead">WEBSITE</span>thongtinbynguyenduong.blogspot.com/</li>
+                            <li><span class="overhead">Địa chỉ</span>Thái Nguyên, VietNam</li>
                         </ul>
                     </div>
                 </header>
@@ -175,7 +167,7 @@
                     <!-- Content -->
                     <div class="col-12">
                         <div class="box box-content">
-				<marquee><p class="tet"> Chào mừng các bạn đến với <font color="blue"> THÔNG TIN CÁ NHÂN </font> của <font color="green"> ĐINH DUY VINH
+				<marquee><p class="tet"> Chào mừng các bạn đến với <font color="blue"> THÔNG TIN CÁ NHÂN </font> của <font color="green"> NGUYỄN ĐÌNH DƯƠNG
                </font></p><font color="green">
                <style>
                    @-webkit-keyframes my {
@@ -222,8 +214,8 @@
                                                 &nbsp;
                                                 <h4 class="title title--h4">MB Bank ①</h4>
                                                 <p>
-                                                    <b>DINH DUY VINH</b><br />
-                                                    <b id="mbbank">0914428517</b>
+                                                    <b>NGUYEN DINH DUONG</b><br />
+                                                    <b id="mbbank">1030082007</b>
                                                 </p>
                                                 <button type="button" style="height: 30px; width: 100px;" class="btn btn-primary" onclick="copyToClipboard('#mbbank')">COPY</button>
                                             </div>
@@ -238,8 +230,8 @@
                                                 &nbsp;
                                                 <h4 class="title title--h4">MB Bank ②</h4>
                                                 <p>
-                                                    <b>DINH DUY VINH</b><br />
-                                                    <b id="mbbank">7609012005</b>
+                                                    <b>NGUYEN DINH DUONG</b><br />
+                                                    <b id="mbbank">1030082007</b>
                                                 </p>
                                                 <button type="button" style="height: 30px; width: 100px;" class="btn btn-primary" onclick="copyToClipboard('#mbbank')">COPY</button>
                                             </div>
@@ -254,8 +246,8 @@
                                                 &nbsp;
                                                 <h4 class="title title--h4">Momo</h4>
                                                 <p>
-                                                    <b>Đinh Duy Vinh</b><br />
-                                                    <b id="momo">0914428517</b>
+                                                    <b>Nguyễn Đình Dương</b><br />
+                                                    <b id="momo">0342206319</b>
                                                 </p>
                                                 <button type="button" style="height: 30px; width: 100px;" class="btn btn-primary" onclick="copyToClipboard('#momo')">COPY</button>
                                             </div>
@@ -268,8 +260,8 @@
                                                 &nbsp;
                                                 <h4 class="title title--h4">Zalo Pay</h4>
                                                 <p>
-                                                    <b>Đinh Duy Vinh</b><br />
-                                                    <b id="pay">0914428517</b>
+                                                    <b>Nguyễn Đình Dương</b><br />
+                                                    <b id="pay">0342206319</b>
                                                 </p>
                                                 <button type="button" style="height: 30px; width: 100px;" class="btn btn-primary" onclick="copyToClipboard('#pay')">COPY</button>
                                             </div>
@@ -278,7 +270,7 @@
                                     <!-- Case Item -->
                                 </div>
                                 <center>
-                                    <a style="color:dark;" href="https://me.momo.vn/dinhduyvinh">🌐 𝗙𝗔𝗖𝗘𝗕𝗢𝗢𝗞 - 𝗧𝗜𝗞 𝗧𝗢𝗞 - 𝗜𝗡𝗦𝗧𝗔𝗚𝗥𝗔𝗠 🌐</a>
+                                    <a style="color:dark;" href="https://me.momo.vn/9vIaT5sQf2tGtWI3sGUDTq">🌐 𝗙𝗔𝗖𝗘𝗕𝗢𝗢𝗞 - 𝗧𝗜𝗞 𝗧𝗢𝗞 - 𝗜𝗡𝗦𝗧𝗔𝗚𝗥𝗔𝗠 🌐</a>
                                 </center>
                             </div>
 
@@ -290,7 +282,7 @@
                             © 2022 Vận Hành Bởi
                             <a href="/">
                                 <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>
-                                    document.write("Đinh Duy Vinh ✓");
+                                    document.write("Nguyễn Đình Dương ✓");
                                 </script>
                             </a>
                         </footer>
