--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!--=============== CSS ===============-->
     <link rel="stylesheet" href="assets/css/styles.css">
 
-    <title>Đinh Duy Vinh - PROFILE</title>
+    <title>Nguyễn Đình Dương - PROFILE</title>
 </head>
 <body>
     <!--=============== HEADER ===============-->
@@ -167,8 +167,8 @@
 
                         <div class="projects__modal">
                             <div>
-                                <span class="projects__subtitle">New Year 2023</span>
-                                <h3 class="projects__title">[CHECK SCAM]</h3>
+                                <span class="projects__subtitle">Web</span>
+                                <h3 class="projects__title">[NEW YEAR 2023]</h3>
                                 <a href="https://newyear2023ok.blogspot.com/" class="projects__button button button__small">
                                     <i class="ri-eye-fill"></i>
                                 </a>
@@ -579,9 +579,9 @@
     
     
     <!--=============== FOOTER ===============-->
-    <footer class="footer container">
+    <footer ="footer container">
         <span class="footer__copy">
-            &#169; </a>  2022 </a> Hệ thống thiết kế và vận hành bởi <a href="https://www.facebook.com/ngyendinhduongvip/">Nguyễn Đình 
+            &#169; </a>  2022 </a> Hệ thống thiết kế và vận hành bởi <a href="https://www.facebook.com/ngyendinhduongvip/">Nguyễn Đình Dương
         </span>
     </footer>
 
@@ -591,7 +591,7 @@
     <!--=============== MAIN JS ===============-->
     <script src="assets/js/main.js"></script>
     <head>
-	    <title>Đinh Duy Vinh (Byy)</title>
+	    <title>Nguyễn Đình Dương (Byy)</title>
 </head>
 <body>
 <marquee id="marq" scrollamount="3" direction="left" loop="50" scrolldelay="0" behavior="scroll" onmouseover="this.stop()" onmouseout="this.start()"style="border:blue 2px SOLID"> Chào mừng các bạn đến với <font color="blue"> THÔNG TIN CÁ NHÂN </font> của <font color="green"> NGUYỄN ĐÌNH DƯƠNG </marquee>
