--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                     </article>
 
                     <article class="projects__card">
-                        <img src="https://i.imgur.com/ktgMhBX.png" alt="" class="projects__img">
+                        <img src="https://i.imgur.com/hPHigIm.png" alt="" class="projects__img">
 
                         <div class="projects__modal">
                             <div>
