--- a/thongtinthanhtoan/index.html
+++ b/thongtinthanhtoan/index.html
@@ -25,7 +25,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="format-detection" content="telephone=no" />
         <meta name="format-detection" content="address=no" />
-        <meta name="author" content="nguyen dinh " />
+        <meta name="author" content="nguyen dinh duong" />
         <!-- Favicons -->
         <link href="img/favicon.ico" rel="shortcut icon" type="image/x-icon" />
         <!-- Styles -->
