--- a/index.html
+++ b/index.html
@@ -581,7 +581,7 @@
     <!--=============== FOOTER ===============-->
     <footer ="footer container">
         <span class="footer__copy">
-            &#169; </a>  2022 </a> Hệ thống thiết kế và vận hành bởi <a href="https://www.facebook.com/ngyendinhduongvip/">Nguyễn Đình Dương
+            &#169; </a>  2022 </a> Hệ thống được vận hành bởi <a href="https://www.facebook.com/ngyendinhduongvip/">Nguyễn Đình Dương
         </span>
     </footer>
 
