--- a/thongtinthanhtoan/index.html
+++ b/thongtinthanhtoan/index.html
@@ -121,7 +121,7 @@
         <main class="main">
             <!-- Header Image -->
             <div class="header-image">
-                <div class="js-parallax" style="background-image: url(https://i.imgur.com/X1F9UnK.jpg);"></div>
+                <div class="js-parallax" style="background-image: url(https://i.imgur.com/xAzt6Jx.jpg);"></div>
             </div>
 
             <div class="container gutter-top">
@@ -129,7 +129,7 @@
                 <header class="header box">
                     <div class="header__left">
                         <div class="header__photo">
-                            <img class="header__photo-img" src="//i.imgur.com/eK2eDhk.png" alt="Admin Vinh !" />
+                            <img class="header__photo-img" src="https://i.imgur.com/kJWSVPc.jpg" alt="Admin Dương !" />
                         </div>
                         <div class="header__base-info">
                             <h2 class="title titl--h1 Ubuntu">
