--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                             <div>
                                 <span class="projects__subtitle">Web</span>
                                 <h3 class="projects__title">Thông Tin Cá Nhân --> Bank</h3>
-                                <a href="https://ngduongprofile.blogspot.com/" class="projects__button button button__small">
+                                <a href="https://zuongpro.github.io/profie/thongtinthanhtoan/" class="projects__button button button__small">
                                     <i class="ri-eye-fill"></i>
                                 </a>
                             </div>
