--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
                             tracks:[{
                                 name: "NGUYỄN ĐÌNH DƯƠNG",
                                 artist: "10 Ngàn Năm (Speed up)",
-                                cover: "https://i.imgur.com/DI9f3UX.jpg",
+                                cover: "https://i.imgur.com/5jAsKfm.jpg",
                                 source: "https://docs.google.com/uc?id=1JOIIjqq22rlZ2zG8wv9HQ2Axwsrbz5tN",
                                 url: "https://docs.google.com/uc?id=1JOIIjqq22rlZ2zG8wv9HQ2Axwsrbz5tN",
                                 favorited: false
