--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <a href="thongtinthanhtoan" class="button">
                     Thông Tin Thanh Toán<i class="ri-bank-line"></i>
                 </a>
-                 <a href="guicrushne" class="button">
+                 <a href="demngayyeu" class="button">
                     Gửi Tới Cậu Nè !! <i class="ri-heart-fill"></i>
                 </a>
 
